# OpenFDE

./: .gitignore  FDE 实战蓝皮书.md  FDE 所需工具地图.md  LICENSE  README.md  README.zh-CN.md
.github/workflows/: agent-ci.yml
agent/: .gitignore  CREDITS.md  DESIGN.md  README.md  SPEC.md  pyproject.toml
agent/blog/: introducing-openfde-agent-v0.1.en.md  introducing-openfde-agent-v0.1.md
agent/examples/sales-qualification/: README.md  expected-judgment.json  outcomes.jsonl  project.yaml  trace.jsonl
agent/openfde/: __init__.py  _examples.py  cli.py
agent/openfde/llm/: __init__.py
agent/openfde/loop/: __init__.py  act.py  elicit.py  evolve.py  induce.py  observe.py
agent/openfde/planes/: __init__.py  attribution.py  deploy.py
agent/openfde/plugins/: __init__.py
agent/openfde/schema/: __init__.py  attribution.py  connector.py  elicitation.py  judgment_unit.py  trace.py
agent/tests/: test_loop.py
research/: aggregate_refs.py  refs-anthropic.json  refs-cases.json  refs-china.json  refs-china2.json  refs-community.json  refs-firstperson.json  refs-github.json  refs-google.json  refs-media.json  refs-openai.json  refs-otherlabs.json  refs-palantir.json  refs-vc.json
