[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openfde"
version = "0.1.0"
description = "The FDE Loop — an in-situ FDE layer that learns tacit expert judgment on-site. OBSERVE → ELICIT → INDUCE → ACT → EVOLVE."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OpenFDE" }]
keywords = ["fde", "agent", "forward-deployed-engineer", "judgment-unit", "elicitation", "enterprise-ai"]

# The main repo keeps only a thin, low-dependency core.
# Heavy runtimes (LangGraph, Mem0, GEPA, Graphiti, browser-use ...) are
# OPTIONAL adapters — see [project.optional-dependencies] and openfde/adapters.
dependencies = [
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
llm = ["httpx>=0.27"]           # OpenAI-compatible chat client for ELICIT/INDUCE
evolve = ["gepa>=0.0.1"]        # reflective prompt optimizer for EVOLVE (reference adapter)
runtime = ["pydantic-ai>=0.0.1"]  # one reference ACT runtime; others are documented adapters
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
openfde = "openfde.cli:app"

[project.urls]
Homepage = "https://open-fde.com"
Source = "https://github.com/open-fde/openfde"

[tool.hatch.build.targets.wheel]
packages = ["openfde"]

[tool.pytest.ini_options]
testpaths = ["tests"]
